--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@ button[type="submit"]::after {
 }
 .inputs-wrapper {
   min-width: 300px;
-  border: 1px solid rgba(0, 0, 0, 0.3);
+  /* border: 1px solid rgba(0, 0, 0, 0.3); */
   background-color: white;
 }
 .heading-wrapper {
