--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,7 @@ button[type="submit"]::after {
 }
 .inputs-wrapper {
   min-width: 300px;
+  max-width: 300px;
   /* border: 1px solid rgba(0, 0, 0, 0.3); */
   background-color: white;
 }
@@ -107,6 +108,7 @@ button[type="submit"]::after {
 .display-wrapper {
   background-color: #ffffff;
   min-width: 720px;
+  max-width: 720px;
   border: 1px solid rgba(0, 0, 0, 0.3);
   text-align: center;
   height: 1080px;
@@ -157,17 +159,19 @@ button[type="submit"]::after {
 .education-info-container > h2 {
   margin-top: 20px;
 }
+
+/* Education */
+.education > p:nth-child(n + 2):nth-child(-n + 4) {
+  margin-top: -20px;
+}
+/* practical */
+.practical > p:nth-child(n + 2):nth-child(-n + 3) {
+  margin-top: -10px;
+}
 .practical-flex {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px 200px;
-}
-.practical-flex p {
-  margin: 0;
-}
-
-/* Education */
-.education > p:nth-child(n + 2):nth-child(-n + 4) {
-  margin-top: -10px;
+  margin-top: -30px;
 }
